<resources>
    <string name="app_name">package_delivery_app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_vendor">Vendor</string>
    <string name="menu_building">Building</string>
    <string name="menu_driver">Driver</string>
    <string name="menu_history">History</string>
    <string name="menu_account">Account</string>
    <string name="text_home_pending">Pending</string>
    <string name="text_home_on_the_way">On the Way</string>

    <string-array name="package_ontheway_vendor_array">
        <item>IKEA Southampton</item>
        <item>Buck and Hickman</item>
        <item>Howdens</item>
        <item>Eurocell</item>
        <item>Hampshire Ltd</item>
        <item>Solent Stevedores Ltd</item>
        <item>Solent Stevedores Ltd</item>
    </string-array>
    <string-array name="package_ontheway_building_array">
        <item>Mayflower Halls</item>
        <item>Southampton Port</item>
        <item>The Civic Centre</item>
        <item>Avenue Campus</item>
        <item>Highfield Campus</item>
        <item>King Edward School</item>
        <item>King Edward School</item>
    </string-array>
    <string-array name="package_ontheway_driver_array">
        <item>Basel Halak</item>
        <item>Geoff Merrett</item>
        <item>Kirk Martinez</item>
        <item>Ruomeng Huang</item>
        <item>Alex S Weddell</item>
        <item>Mohammed El-Hajjar</item>
        <item>Mohammed El-Hajjar</item>
    </string-array>
    <string-array name="package_pending_vendor_array">
        <item>Solent Stevedores Ltd</item>
        <item>IKEA Southampton</item>
        <item>Buck and Hickman</item>
        <item>Howdens</item>
        <item>Eurocell</item>
        <item>Hampshire Ltd</item>
        <item>Solent Stevedores Ltd</item>
    </string-array>
    <string-array name="package_pending_building_array">
        <item>King Edward School</item>
        <item>Mayflower Halls</item>
        <item>Southampton Port</item>
        <item>The Civic Centre</item>
        <item>Avenue Campus</item>
        <item>Highfield Campus</item>
        <item>King Edward School</item>
    </string-array>
    <string-array name="package_pending_driver_array">
        <item>Mohammed El-Hajjar</item>
        <item>Basel Halak</item>
        <item>Geoff Merrett</item>
        <item>Kirk Martinez</item>
        <item>Ruomeng Huang</item>
        <item>Alex S Weddell</item>
        <item>Mohammed El-Hajjar</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="label_package_fragment">Package</string>
    <string name="label_new_item_fragment">New Package</string>

    <!--    <string name="app_name">Affirmations</string>-->
    <string name="affirmation1">Basel Halak</string>
    <string name="affirmation2">Geoff Merrett</string>
    <string name="affirmation3">Kirk Martinez</string>
    <string name="affirmation4">Ruomeng Huang</string>
    <string name="affirmation5">Alex S Weddell</string>
    <string name="affirmation6">Mohammed El-Hajjar</string>
    <string name="affirmation7">Mohammed El-Hajjar</string>
    <string name="affirmation8">Shasini Umesha</string>
    <string name="affirmation9">Yifei Shi</string>
    <string name="affirmation10">Wu Si</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>