<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_vendor"
            android:icon="@drawable/ic_menu_vendor"
            android:title="@string/menu_vendor" />
        <item
            android:id="@+id/nav_building"
            android:icon="@drawable/ic_menu_building"
            android:title="@string/menu_building" />
        <item
            android:id="@+id/nav_driver"
            android:icon="@drawable/ic_menu_driver"
            android:title="@string/menu_driver" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_account"
            android:title="Account" />
    </group>
</menu>