<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.package_delivery_app.ui.home.HomeFragment"
        android:label=""
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_packageDetailFragment"
            app:destination="@id/packageDetailFragment" />
        <action
            android:id="@+id/action_nav_home_to_addNewItemFragment"
            app:destination="@id/newItemFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_vendor"
        android:name="com.example.package_delivery_app.ui.vendor.VendorFragment"
        android:label="@string/menu_vendor"
        tools:layout="@layout/fragment_vendor" >
        <action
            android:id="@+id/action_nav_vendor_to_addNewItemFragment"
            app:destination="@id/newItemFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_building"
        android:name="com.example.package_delivery_app.ui.building.BuildingFragment"
        android:label="@string/menu_building"
        tools:layout="@layout/fragment_building" >
        <action
            android:id="@+id/action_nav_building_to_addNewItemFragment"
            app:destination="@id/newItemFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_driver"
        android:name="com.example.package_delivery_app.ui.driver.DriverFragment"
        android:label="@string/menu_driver"
        tools:layout="@layout/fragment_driver" >
        <action
            android:id="@+id/action_nav_driver_to_addNewItemFragment"
            app:destination="@id/newItemFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.package_delivery_app.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/packageDetailFragment"
        android:name="com.example.package_delivery_app.PackageDetailFragment"
        android:label="@string/label_package_fragment"
        tools:layout="@layout/fragment_package_detail" >
        <argument
            android:name="packageID"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/newItemFragment"
        android:name="com.example.package_delivery_app.NewItemFragment"
        android:label="@string/label_new_item_fragment"
        tools:layout="@layout/fragment_new_item">
        <argument
            android:name="newItemType"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.package_delivery_app.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

</navigation>